I have edited file content by adding my blog feed
Currency Liquidator educational blog is finacial & foreign currency exchange platform. In our blog we updated the current affairs which affects the financial sectors today.
Thanks & Regards,
Ryan Sessar

--- a/feeds.cfg
+++ b/feeds.cfg
@@ -700,3 +700,7 @@ link = http://gil.badall.net/tag/plone
 [https://www.wildcardcorp.com/plone-blog/RSS]
 name = Wildcard Corp
 link = https://www.wildcardcorp.com/plone-blog
+
+[http://www.currencyliquidator.com/blog/feed/]
+name = Ryan Sessar
+link = http://www.currencyliquidator.com/blog/
